--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   json_annotation: ^4.8.0
+  flutter_riverpod: ^2.2.0
 
 dev_dependencies:
   flutter_test:
